--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>Kasun Gunasekara</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -52,9 +52,9 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <li class="page-scroll">
+                    <!-- <li class="page-scroll">
                         <a href="#about">About</a>
-                    </li>
+                    </li> -->
                     <li class="page-scroll">
                         <a href="http://blog.gunasekara.me/">Blog</a>
                     </li>
@@ -77,7 +77,7 @@
                     <div class="intro-text">
                         <span class="name">Kasun Gunasekara</span>
                         <hr class="star-light">
-                        <span class="skills">Google Student Ambassador - AIESECer - Software Engineer tobe</span>
+                        <span class="skills">Google Student Ambassador - WSO2 intern - EDM Addict - Amateur Photographer - Memer - YouTuber - AIESECer - Foursquare Super User - Richmondite -  IITian - USJP.</span>
                     </div>
                 </div>
             </div>
@@ -159,7 +159,7 @@
     </section-->
 
     <!-- About Section -->
-    <section class="success" id="about">
+<!--     <section class="success" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -181,7 +181,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Contact Section -->
     <!--section id="contact">
@@ -242,8 +242,8 @@
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-4">
-                        <h3>Location</h3>
-                        <p>Galle, Sri Lanka</p>
+                        <!-- <h3>Location</h3>
+                        <p>Galle, Sri Lanka</p> -->
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
@@ -260,14 +260,14 @@
                             <li>
                                 <a href="https://www.linkedin.com/in/kasun32" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
-<!--                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
-                            </li> -->
+                            <li>
+                                <a href="http://blog.gunasekara.me" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
+                            </li>
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>About The Site</h3>
-                        <p>This is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a> and proudly hosted on GitHub.</p>
+                        <!-- <h3>About The Site</h3>
+                        <p>This is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a> and proudly hosted on GitHub.</p> -->
                     </div>
                 </div>
             </div>
