editing the metatags

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Google Student Ambassador - WSO2 intern - EDM Addict - Amateur Photographer - Memer - YouTuber - AIESECer - Foursquare Super User - Richmondite -  IITian - USJP.">
+    <meta name="author" content="Kasun Gunasekara">
+    <meta name="keywords" content="Kasun,Gunasekara,Kaz,Kalumallii,Kalumalli,Richmond College,Galle,Sri Lanka,Informatics Institute of Technology,IIT,University of Sri Jayewardenepura,USJP,WSO2,Google Student Ambassador,GSA,GSASEA,AIESEC">
 
     <title>Kasun Gunasekara</title>
 
