editing description and facebook url

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Google Student Ambassador - WSO2 intern - EDM Addict - Amateur Photographer - Memer - YouTuber - AIESECer - Foursquare Super User - Richmondite -  IITian - USJP.">
+    <meta name="description" content="Videomaker - Memer - Codes for Living">
     <meta name="author" content="Kasun Gunasekara">
     <meta name="keywords" content="Kasun,Gunasekara,Kaz,Kalumallii,Kalumalli,Richmond College,Galle,Sri Lanka,Informatics Institute of Technology,IIT,University of Sri Jayewardenepura,USJP,WSO2,Google Student Ambassador,GSA,GSASEA,AIESEC">
 
@@ -264,7 +264,7 @@
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="https://www.facebook.com/kasun32" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="https://www.facebook.com/theKalumalli" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <li>
                                 <a href="https://plus.google.com/+KaZGunasekara" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
