--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <div class="intro-text">
                         <span class="name">Kasun Gunasekara</span>
                         <hr class="star-light">
-                        <span class="skills">Google Student Ambassador - WSO2 intern - EDM Addict - Amateur Photographer - Memer - YouTuber - AIESECer - Foursquare Super User - Richmondite -  IITian - USJP.</span>
+                        <span class="skills">Videomaker - Memer - Codes for Living.</span>
                     </div>
                 </div>
             </div>
