--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <div class="intro-text">
                         <span class="name">Kasun Gunasekara</span>
                         <hr class="star-light">
-                        <span class="skills">a minimalist, memer, vlogger, singer, software engineer.</span>
+                        <span class="skills">a YouTuber / Software Engineer.</span>
                     </div>
                 </div>
             </div>
